--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -130,11 +130,12 @@ table {
 }
 
 body {
-  background-color: black;
-  font-size: 18px;
+  padding-top: 150px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: black;
   color: white;
+  font-size: 18px;
 }
 
 a {
